Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

09-Aug-2013 Jean-Marie Simonet
 # [#31694] No search result at the contacts, weblinks, newsfeeds, categories. Thanks Carsten Wirtz and Tobias Zulauf

07-Aug-2013 Jean-Marie Simonet
 $ [#31606] Small typo fix in lang. Thanks Brian Teeman
 # [#31314] language change dropdown at installation don't work if you scroll down. Thanks Lu Nguyen
 # [#23638] *Uninstalling 2 different extensions gets only one message. Thanks Thong Tran
 # [#31683] In debug mode with mysqli some extensions have warnings when freeing mysqli cursor themselves. Thanks Beat
 # [#31410] Warnings at the offline screen looks bad. Thanks Lu Nguyen
 #$ [#31622] *Media Manager doesn't cope with folder names that include spaces. Thanks Richard McDaniel
 # [#31633] Detailed changelog in readme.txt points to SVN which is out of date. Thanks Brian Teeman

06-Aug-2013 Jean-Marie Simonet
 # [#31478] User Note could be saved without User ID. THanks Khai Vu Dinh
 # [#31648] TAGS Options: Wrong Color on Option Selection.

05-Aug-2013 Jean-Marie Simonet
 # [#31659] Dropdown at frontend search. Thanks Tobias Zulauf
 # [#31350] Missing space in Calendar.
 # [#31676] *Isis: Filter drop-down items hidden by status bar
 # [#31661] Unclosed span tag in debug console. Thanks Constantin Romankiewicz
 # [#30752] J! Update component - > empty custom URL causes error.

04-Aug-2013 Michael Babker
 # [#30834] Template errors when no CSS folder.  Thanks Rune Sjøen
 # [#31318] Bad display of images at Media Manager (IE/FF22).  Thanks Lu Nguyen
 # [#30445] mod_feed template error when displaying feed title.  Thanks Ben Eberle

04-Aug-2013 Jean-Marie Simonet
 # [#31382] Added min-width to (bootstrap) radio buttons to prettify settings. Thanks Peter van Westen