@@ -27,6 +27,7 @@ $ -> Language fix or change
 
 09-Aug-2013 Jean-Marie Simonet
  # [#31694] No search result at the contacts, weblinks, newsfeeds, categories. Thanks Carsten Wirtz and Tobias Zulauf
+ # [#31639] Com_search is using mb string functions (regression)
 
 07-Aug-2013 Jean-Marie Simonet
  $ [#31606] Small typo fix in lang. Thanks Brian Teeman
